--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
 	<div class="content">
 		<div class="intro">
       
-      <span><a href="https://github.com/pozarnik/foodgram">YamDb</a></span>
+      <span><a href="https://github.com/pozarnik/foodgram">Foodgram</a></span>
 			<br>
 			<span>A simple site for publishing cooking recipes</span>
 			<br>
