--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<span>Telegram:</span>
 				</td>
 				<td>
-					<a href="https://t.me/pozarnik">Ivan Alekseyevich</a>
+					<a href="***">***</a>
 				</td>
 			</tr>
 			<tr>
