--- a/projects/index.html
+++ b/projects/index.html
@@ -23,7 +23,12 @@
 
       <span><a href="https://github.com/pozarnik/yatube">YaTube</a></span>
       <br>
-        <span>Site-blog for publishing posts</span>
+        <span>Simple site-blog for publishing posts</span>
+      <br><br>
+      
+      <span><a href="https://github.com/pozarnik/yatube_api_final">YaTube API</a></span>
+      <br>
+        <span>Api for YaTube</span>
       <br><br>
 
     </div>
