--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@
       
         <span><a href="https://github.com/pozarnik/yamdb_api_final">YamDb</a></span>
       <br>
-        <span>Api project for publishing works (music, films, etc)</span>
+        <span>Api project for publishing any works (music, films, etc)</span>
       <br><br>
 
       <span><a href="https://github.com/pozarnik/yatube">YaTube</a></span>
