--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,7 @@
       
       <span><a href="https://github.com/pozarnik/yatube_api_final">YaTube API</a></span>
       <br>
-        <span>Api for YaTube</span>
+        <span>REST Api for YaTube project</span>
       <br><br>
 
     </div>
