--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Personal Page</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style.css">
   <link href="Personal%20Page_files/css.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="Personal%20Page_files/style.css">
 </head>
