--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       <span>My PROJECTS</span>
 	  <br><br>
       <div>
-        <span><a href="https://github.com/pozarnik/foodgram"><u>Foodgram</u></a></span>
+        <span style="color:#000080;"><a href="https://github.com/pozarnik/foodgram"><u>Foodgram</u></a></span>
         <br>
         <span>Site for publishing cooking recipes</span>
         <br><br>
-        <span><a href="https://github.com/pozarnik/yamdb_api_final"><u>YamDb</u></a></span>
+        <span style="color:#000080;"><a href="https://github.com/pozarnik/yamdb_api_final"><u>YamDb</u></a></span>
         <br>
         <span>REST Api project for publishing any works (music, films, etc)</span>
         <br><br>
-        <span><a href="https://github.com/pozarnik/yatube"><u>YaTube</u></a></span>
+        <span style="color:#000080;"><a href="https://github.com/pozarnik/yatube"><u>YaTube</u></a></span>
         <br>
         <span>Simple site-blog for publishing posts</span>
         <br><br>
-        <span><a href="https://github.com/pozarnik/yatube_api_final"><u>YaTube API</u></a></span>
+        <span style="color:#000080;"><a href="https://github.com/pozarnik/yatube_api_final"><u>YaTube API</u></a></span>
         <br>
        <span>REST Api for YaTube project</span>
       </div>
