--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <span>REST Api project for publishing any works (music, films, etc)</span>
         <br><br>
         <span><a href="https://github.com/pozarnik/yatube"><u>YaTube</u></a></span>
+	<br>
+        <span>Simple site-blog for publishing posts</span>
       </div>
     </div>
 
