--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br><br>
         <span><a href="https://github.com/pozarnik/yamdb_api_final"><u>YamDb</u></a></span>
         <br>
-        <span>REST Api project for publishing any works (music, films, etc)</span>
+        <span>REST Api project for publishing reviews for any works (music, films, etc)</span>
         <br><br>
         <span><a href="https://github.com/pozarnik/yatube"><u>YaTube</u></a></span>
 	<br>
