--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       </td>
     </tr>
 
-   <! <tr>
+    <tr>
       <td>
-        <span>Telegram:</span>
+<!         <span>Telegram:</span> -->
       </td>
       <td>
-        <a href="https://telegram.me/pozarnik">pozarnik</a>
+<!        <a href="https://telegram.me/pozarnik">pozarnik</a> -->
       </td>
     </tr> -->
 
