--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
     <tr>
       <td>
-<!         <span>Telegram:</span> -->
+         <span>Telegram:</span>
       </td>
       <td>
-<!        <a href="https://telegram.me/pozarnik">pozarnik</a> -->
+        <a href="https://telegram.me/pozarnik">pozarnik</a>
       </td>
-    </tr> -->
+    </tr>
 
     <tr>
       <td>
